--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <p>Trend Mağaza olarak müşterilere en kaliteli ve en trend ürünleri sunma misyonuyla yola çıktık. Sizlere en iyi alışveriş deneyimini yaşatmak için buradayız.</p>
   <!-- <p>Ürün koleksiyonumuzu keşfetmek ve trend ürünlerle tanışmak için aşağıdaki linke tıklayabilirsiniz:</p> -->
   <p><strong>Web Sitemiz:</strong> <a href="https://store-project-zeta.vercel.app/" target="_blank">Trend Mağaza</a></p>
-  <img src="TrendMagaza/Anasayfa.png" alt="Book Store - Kitap Dünyası" class="project-image">
+  <img src="TrendMagaza/Anasayfa.png" alt="Book Store - Kitap Dünyası" class="project-image1">
 
   <div>
     <a href="#page-2" class="btn btn-dark">
